--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
     <meta name="description" content="A face detection application" />
 
     <title>BA Face Decection Application</title>
+
+    <style>
+      * {
+        margin: 0px;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
