--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="A face detection application" />
 
-    <title>BA Face Decection Application</title>
+    <title>BA Face Detection Application</title>
 
     <style>
       * {
